--- a/service/build.gradle
+++ b/service/build.gradle
@@ -54,4 +54,5 @@ dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.1.1.RELEASE'
     compile group: 'org.mybatis.spring.boot', name: 'mybatis-spring-boot-starter', version: '1.3.2'
     compile 'mysql:mysql-connector-java:6.0.6'
+    compile 'org.apache.commons:commons-lang3:3.4'
 }
