--- a/service/src/main/resources/application.yaml
+++ b/service/src/main/resources/application.yaml
@@ -5,7 +5,8 @@ server:
 spring:
   datasource:
 #    url: jdbc:mysql://172.16.175.216:3306/projectfit5120?useUnicode=true&characterEncoding=UTF-8
-    url: jdbc:mysql://${DB_URL:172.16.175.216:3306}/projectfit5120?useUnicode=true&characterEncoding=UTF-8
+#    url: jdbc:mysql://${DB_URL:172.16.175.216:3306}/projectfit5120?useUnicode=true&characterEncoding=UTF-8
+    url: jdbc:mysql://${DB_URL:18.218.99.242:3306}/projectfit5120?useUnicode=true&characterEncoding=UTF-8
     username: root
     password: 123456
 #    dbcp2:
